<resources>
    <string name="app_name">Covid_19</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_covid_19">Covid-19</string>
    <string name="menu_symptom">Symptoms And Prevention</string>
    <string name="menu_statics">Statics</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>
    <string name="menu_track">Tracker</string>

    <string name="home_second">Home Second</string>





    <string name="email"><u>ssandaruwan57@gmail.com</u></string>
</resources>
